# scan-my-disk

./: .clang-format  .gitignore  CMakeCommon.cmake  CMakeLists.txt  CMakePresets.json  README.md  ScanMyDisk.DotSettings  Translations.xml
Source/: Chart.cc  Chart.h  Filesystem.cc  Filesystem.cpp  Filesystem.h  Localization.cc  Localization.cpp  Localization.h  Log.cc  Log.h  Main.cc  Main.cpp  PrecompiledHeaders.h  Sample.cc  Sample.cpp  Sample.h  Settings.h  Test.h  Utilities.cc  Utilities.h
Source/Debug/: CopyMoveCounter.h  CopyMoveData.h
Source/Tree/: Node.h
Tests/: CMakeLists.txt
Tests/Collections/: Test.cpp  TreeNodeTest.cc
Tests/Common/: Checksum.cpp  Test.cpp
Tests/Debug/: CopyMoveCounterTests.cc  CopyMoveDataTests.cc  Test.cpp
Tests/Event/: Test.cpp
Tests/Filesystem/: Test.cpp  Tests.cc
Tests/Filesystem/Sandbox/Program Data/: Reader
Tests/Localization/: Test.cc  Test.cpp
Tests/Log/: LogTests.cc  Test.cpp
Tests/Parallel/: Test.cpp
Tests/Sample/: Test.cc  Test.cpp
Tests/Storage/: Test.cpp
Tests/Utilities/: CRC32Tests.cc  Test.cpp
Tools/: CMakeLists.txt
Tools/Make Font Texture/: Main.cpp
Tools/MakeFont/: Main.cpp
Tools/MakeIcons/: Main.cpp
Tools/MakeText/: Main.cpp
